# windows-optimization-tool

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.mjs
scripts/: make-portable.ps1  run-tauri.ps1
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/resources/scripts/: xianyu_filter_keywords.json  xianyu_search.py
src-tauri/resources/tools/windows-activation/: README.md
src-tauri/resources/tools/windows-update-settings/: Wub.ini
src-tauri/src/: lib.rs  main.rs
src/components/toolbox/: NoticePanel.vue  SystemOptimizePanel.vue  UtilityToolsPanel.vue
src/composables/: usePriceCrawler.js
src/views/: DashboardPage.vue  PcDiyWindowPage.vue  XianyuLoginPage.vue
