[package]
name = "system_toolbox_tauri"
version = "1.0.0"
description = "系统工具箱 Tauri 轻量桌面端应用"
authors = ["Codex"]
edition = "2021"

[lib]
name = "system_toolbox_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
